Fix cards text-align

--- a/_sass/development.scss
+++ b/_sass/development.scss
@@ -70,7 +70,7 @@
         &__description {
           font-size: 16px;
           line-height: 1.4;
-          text-align: justify;
+          text-align: left;
         }
 
         .button {
